style(caption): Smaller font and margin-top

--- a/src/scss/03_elements/_elements.media.scss
+++ b/src/scss/03_elements/_elements.media.scss
@@ -10,8 +10,9 @@ figure {
   margin-bottom: 2rem;
 
   figcaption {
-    margin: 1rem 0;
-    max-width: inherit;
+    margin: 0.25rem 0;
+    //max-width: inherit;
+    font-size: small;
   }
 }
 
