--- a/src/scss/05_components/_components.modal.scss
+++ b/src/scss/05_components/_components.modal.scss
@@ -126,11 +126,27 @@ $controlHeight: 4rem;
     height: 100%;
     justify-content: center;
 
+    &__zoom {
+      img {
+        transition: opacity .5s;
+        display: block;
+        width: 100%;
+        opacity: 1;
+      }
+      & img:hover {
+        opacity: 0;
+      }
+      background-position: 50% 50%;
+      position: relative;
+      width: 500px;
+      overflow: hidden;
+    }
+
     &__media {
       align-items: center;
       display: flex;
       flex-direction: column;
-      height: 100%;
+      //height: 100%;
       justify-content: center;
       width: 100%;
 
