--- a/src/assets/fonts/icon/icons.css
+++ b/src/assets/fonts/icon/icons.css
@@ -355,96 +355,100 @@
   content: "\EA23"
 }
 
-.icon-pencil:before {
+.icon-parallel:before {
   content: "\EA24"
 }
 
-.icon-piechart:before {
+.icon-pencil:before {
   content: "\EA25"
 }
 
-.icon-play-circle:before {
+.icon-piechart:before {
   content: "\EA26"
 }
 
-.icon-plus:before {
+.icon-play-circle:before {
   content: "\EA27"
 }
 
-.icon-presentation:before {
+.icon-plus:before {
   content: "\EA28"
 }
 
-.icon-radar:before {
+.icon-presentation:before {
   content: "\EA29"
 }
 
-.icon-refresh:before {
+.icon-radar:before {
   content: "\EA2A"
 }
 
-.icon-resolve:before {
+.icon-refresh:before {
   content: "\EA2B"
 }
 
-.icon-scatterplot:before {
+.icon-resolve:before {
   content: "\EA2C"
 }
 
-.icon-search:before {
+.icon-scatterplot:before {
   content: "\EA2D"
 }
 
-.icon-settings:before {
+.icon-search:before {
   content: "\EA2E"
 }
 
-.icon-slides:before {
+.icon-settings:before {
   content: "\EA2F"
 }
 
-.icon-social:before {
+.icon-slides:before {
   content: "\EA30"
 }
 
-.icon-sort-asc:before {
+.icon-social:before {
   content: "\EA31"
 }
 
-.icon-sort-desc:before {
+.icon-sort-asc:before {
   content: "\EA32"
 }
 
-.icon-sound-off:before {
+.icon-sort-desc:before {
   content: "\EA33"
 }
 
-.icon-sound-on:before {
+.icon-sound-off:before {
   content: "\EA34"
 }
 
-.icon-stop-circle:before {
+.icon-sound-on:before {
   content: "\EA35"
 }
 
-.icon-table:before {
+.icon-stop-circle:before {
   content: "\EA36"
 }
 
-.icon-trash:before {
+.icon-table:before {
   content: "\EA37"
 }
 
-.icon-warning:before {
+.icon-trash:before {
   content: "\EA38"
 }
 
-.icon-zoom-out:before {
+.icon-warning:before {
   content: "\EA39"
 }
 
-.icon-zoom:before {
+.icon-zoom-out:before {
   content: "\EA3A"
+}
+
+.icon-zoom:before {
+  content: "\EA3B"
 }
 
 
