fix(CSS): Video modal-view working again

--- a/src/scss/05_components/_components.modal.scss
+++ b/src/scss/05_components/_components.modal.scss
@@ -157,6 +157,10 @@ $controlHeight: 4rem;
           min-height: 0;
         }
       }
+
+      &[data-media-type="iframe"] {
+        height: 100%;
+      }
     }
 
     figcaption {
