--- a/src/scss/05_components/_components.gallery.scss
+++ b/src/scss/05_components/_components.gallery.scss
@@ -23,6 +23,11 @@
       object-fit: cover;
       width: 100%;
     }
+
+    audio {
+      width: 100%;
+      height: 55%;
+    }
   }
 
   > * {
