Add background to gallery cards

--- a/src/scss/05_components/_components.gallery.scss
+++ b/src/scss/05_components/_components.gallery.scss
@@ -15,6 +15,7 @@
     width: 25rem;
     height: 25rem;
     display: inline-block;
+    background-color: rgba(black, 0.85);
 
     img,
     video,
