--- a/src/scss/00_settings/_settings.fonts.scss
+++ b/src/scss/00_settings/_settings.fonts.scss
@@ -19,6 +19,7 @@
     /* Safari, Android, iOS */
       url("../assets/fonts/source-sans-pro/source-sans-pro-v14-latin-regular.svg#SourceSansPro")
       format("svg"); /* Legacy iOS */
+  font-display: swap;
 }
 
 /* source-sans-pro semibold */
@@ -42,6 +43,7 @@
     /* Safari, Android, iOS */
       url("../assets/fonts/source-sans-pro/source-sans-pro-v14-latin-600.svg#SourceSansPro")
       format("svg"); /* Legacy iOS */
+  font-display: swap;
 }
 
 /* source-sans-pro bold */
@@ -65,6 +67,7 @@
     /* Safari, Android, iOS */
       url("../assets/fonts/source-sans-pro/source-sans-pro-v14-latin-700.svg#SourceSansPro")
       format("svg"); /* Legacy iOS */
+  font-display: swap;
 }
 
 /* source-serif-pro semibold */
@@ -88,6 +91,7 @@
     /* Safari, Android, iOS */
       url("../assets/fonts/source-serif-pro/source-serif-pro-v10-latin-600.svg#SourceSerifPro")
       format("svg"); /* Legacy iOS */
+  font-display: swap;
 }
 
 /* source-serif-pro bold */
@@ -111,6 +115,7 @@
     /* Safari, Android, iOS */
       url("../assets/fonts/source-serif-pro/source-serif-pro-v10-latin-700.svg#SourceSerifPro")
       format("svg"); /* Legacy iOS */
+  font-display: swap;
 }
 
 /* source-code-pro regular */
@@ -134,6 +139,7 @@
     /* Safari, Android, iOS */
       url("../assets/fonts/source-code-pro/source-code-pro-v13-latin-regular.svg#SourceCodePro")
       format("svg"); /* Legacy iOS */
+  font-display: swap;
 }
 
 /* source-code-pro bold */
@@ -157,4 +163,5 @@
     /* Safari, Android, iOS */
       url("../assets/fonts/source-code-pro/source-code-pro-v13-latin-600.svg#SourceCodePro")
       format("svg"); /* Legacy iOS */
+  font-display: swap;
 }
