--- a/src/templates/icon-preview/icons.css
+++ b/src/templates/icon-preview/icons.css
@@ -230,7 +230,8 @@
   url(<%= fontPath %><%= fontName %>.woff2) format("woff2"),
   url(<%= fontPath %><%= fontName %>.woff) format("woff"),
   url(<%= fontPath %><%= fontName %>.ttf) format("truetype"),
-  url(<%= fontPath %><%= fontName %>.svg#<%= fontName %>) format("svg")
+  url(<%= fontPath %><%= fontName %>.svg#<%= fontName %>) format("svg");
+  font-display: swap;
 }
 
 .<%= className %> {
