--- a/src/assets/fonts/icon/_icons.scss
+++ b/src/assets/fonts/icon/_icons.scss
@@ -526,7 +526,8 @@ $icon-zoom: "\EA3C";
   url(../../src/assets/fonts/icon/fonts/icon.woff2) format("woff2"),
   url(../../src/assets/fonts/icon/fonts/icon.woff) format("woff"),
   url(../../src/assets/fonts/icon/fonts/icon.ttf) format("truetype"),
-  url(../../src/assets/fonts/icon/fonts/icon.svg#icon) format("svg")
+  url(../../src/assets/fonts/icon/fonts/icon.svg#icon) format("svg");
+  font-display: swap;
 }
 
 $font-icon: "icon";
