improve: Replace SASS `/` by `math.div`
This removes some warnings introduced by the newest SASS version.

--- a/src/scss/01_tools/_tools.px-em-calc.scss
+++ b/src/scss/01_tools/_tools.px-em-calc.scss
@@ -1,11 +1,12 @@
+@use "sass:math";
 $browser-context: 16;
 
 //un-modified
 @function calc-em($target-px, $context) {
-  @return ($target-px / $context) * 1em;
+  @return math.div($target-px, $context) * 1em;
 }
 
 // and modified to accept a base context variable
 @function em($pixels, $context: $browser-context) {
-  @return ($pixels / $context) * 1em;
+  @return math.div($pixels, $context) * 1em;
 }
