fix: Styling of responsiveVoiceInfo on mobile
solves #59

--- a/src/scss/05_components/_components.responsive-voice.scss
+++ b/src/scss/05_components/_components.responsive-voice.scss
@@ -23,6 +23,10 @@ $responsive-voice-hight: 7rem;
     }
   }
 
+  &__info {
+    text-align: center;
+  }
+
   @at-root html.lia-variant-dark & {
     background-color: rgb(var(--lia-anthracite));
   }
