feat(Code): Add resizable terminal windows
The max-height is still set to 200px and the terminal will grow up to
this size. The user can now also resize the terminal manually, in this
case the max-height property will be overwritten and temporally the user
defined size will be stored until the next reload.

[Issue: #69]

--- a/src/scss/03_elements/_elements.code.scss
+++ b/src/scss/03_elements/_elements.code.scss
@@ -64,6 +64,7 @@
       background-color: rgb(var(--lia-anthracite));
       margin: 0;
       max-height: 20rem;
+      resize: vertical;
       overflow-y: auto;
       padding: 1rem 1.6rem;
     }
