Update styling for fontsize

--- a/src/scss/05_components/_components.fontscale.scss
+++ b/src/scss/05_components/_components.fontscale.scss
@@ -1,6 +1,8 @@
 .lia-fontscale {
   display: flex;
   align-items: center;
+  width: 100%;
+  justify-content: space-between;
 
   > *:not(:last-child) {
     margin-right: 1rem;
