--- a/src/scss/05_components/_components.support-menu.scss
+++ b/src/scss/05_components/_components.support-menu.scss
@@ -158,7 +158,7 @@
     position: relative;
     right: 0;
     top: 0;
-    width: auto;
+    width: max-content;
 
     @at-root html.lia-variant-dark & {
       background-color: rgb(var(--lia-grey-dark));
