--- a/src/scss/03_elements/_elements.table.scss
+++ b/src/scss/03_elements/_elements.table.scss
@@ -111,7 +111,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            background-color: rgb(var(--color-background));
+            // background-color: rgb(var(--color-background));
             height: 100%;
           }
 
