--- a/src/scss/03_elements/_elements.code.scss
+++ b/src/scss/03_elements/_elements.code.scss
@@ -13,6 +13,7 @@
     color: rgb(var(--color-highlight-dark));
     margin-bottom: 0;
     padding: 0 0.5rem;
+    word-break: break-word;
   }
 
   &-control {
