fix(CSS): Add default bg-color to table-cells

--- a/src/scss/03_elements/_elements.table.scss
+++ b/src/scss/03_elements/_elements.table.scss
@@ -186,7 +186,9 @@
   }
 
   &__row {
-    background-color: rgb(var(--color-background));
+    td {
+      background-color: rgb(var(--color-background));
+    }
 
     &:first-of-type > td {
       border-top: 0;
