Add icon-person to classroom

--- a/src/assets/fonts/icon/_icons.scss
+++ b/src/assets/fonts/icon/_icons.scss
@@ -400,122 +400,127 @@ $icon-pencil: "\EA25";
   content: $icon-pencil
 }
 
-$icon-piechart: "\EA26";
+$icon-person: "\EA26";
+.icon-person:before {
+  content: $icon-person
+}
+
+$icon-piechart: "\EA27";
 .icon-piechart:before {
   content: $icon-piechart
 }
 
-$icon-play-circle: "\EA27";
+$icon-play-circle: "\EA28";
 .icon-play-circle:before {
   content: $icon-play-circle
 }
 
-$icon-plus: "\EA28";
+$icon-plus: "\EA29";
 .icon-plus:before {
   content: $icon-plus
 }
 
-$icon-presentation: "\EA29";
+$icon-presentation: "\EA2A";
 .icon-presentation:before {
   content: $icon-presentation
 }
 
-$icon-radar: "\EA2A";
+$icon-radar: "\EA2B";
 .icon-radar:before {
   content: $icon-radar
 }
 
-$icon-refresh: "\EA2B";
+$icon-refresh: "\EA2C";
 .icon-refresh:before {
   content: $icon-refresh
 }
 
-$icon-resolve: "\EA2C";
+$icon-resolve: "\EA2D";
 .icon-resolve:before {
   content: $icon-resolve
 }
 
-$icon-sankey: "\EA2D";
+$icon-sankey: "\EA2E";
 .icon-sankey:before {
   content: $icon-sankey
 }
 
-$icon-scatterplot: "\EA2E";
+$icon-scatterplot: "\EA2F";
 .icon-scatterplot:before {
   content: $icon-scatterplot
 }
 
-$icon-search: "\EA2F";
+$icon-search: "\EA30";
 .icon-search:before {
   content: $icon-search
 }
 
-$icon-settings: "\EA30";
+$icon-settings: "\EA31";
 .icon-settings:before {
   content: $icon-settings
 }
 
-$icon-slides: "\EA31";
+$icon-slides: "\EA32";
 .icon-slides:before {
   content: $icon-slides
 }
 
-$icon-social: "\EA32";
+$icon-social: "\EA33";
 .icon-social:before {
   content: $icon-social
 }
 
-$icon-sort-asc: "\EA33";
+$icon-sort-asc: "\EA34";
 .icon-sort-asc:before {
   content: $icon-sort-asc
 }
 
-$icon-sort-desc: "\EA34";
+$icon-sort-desc: "\EA35";
 .icon-sort-desc:before {
   content: $icon-sort-desc
 }
 
-$icon-sound-off: "\EA35";
+$icon-sound-off: "\EA36";
 .icon-sound-off:before {
   content: $icon-sound-off
 }
 
-$icon-sound-on: "\EA36";
+$icon-sound-on: "\EA37";
 .icon-sound-on:before {
   content: $icon-sound-on
 }
 
-$icon-stop-circle: "\EA37";
+$icon-stop-circle: "\EA38";
 .icon-stop-circle:before {
   content: $icon-stop-circle
 }
 
-$icon-sync: "\EA38";
+$icon-sync: "\EA39";
 .icon-sync:before {
   content: $icon-sync
 }
 
-$icon-table: "\EA39";
+$icon-table: "\EA3A";
 .icon-table:before {
   content: $icon-table
 }
 
-$icon-trash: "\EA3A";
+$icon-trash: "\EA3B";
 .icon-trash:before {
   content: $icon-trash
 }
 
-$icon-warning: "\EA3B";
+$icon-warning: "\EA3C";
 .icon-warning:before {
   content: $icon-warning
 }
 
-$icon-zoom-out: "\EA3C";
+$icon-zoom-out: "\EA3D";
 .icon-zoom-out:before {
   content: $icon-zoom-out
 }
 
-$icon-zoom: "\EA3D";
+$icon-zoom: "\EA3E";
 .icon-zoom:before {
   content: $icon-zoom
 }
