--- a/src/assets/fonts/icon/_icons.scss
+++ b/src/assets/fonts/icon/_icons.scss
@@ -360,177 +360,182 @@ $icon-info: "\EA1D";
   content: $icon-info
 }
 
-$icon-lightmode: "\EA1E";
+$icon-jitsi: "\EA1E";
+.icon-jitsi:before {
+  content: $icon-jitsi
+}
+
+$icon-lightmode: "\EA1F";
 .icon-lightmode:before {
   content: $icon-lightmode
 }
 
-$icon-lineplot: "\EA1F";
+$icon-lineplot: "\EA20";
 .icon-lineplot:before {
   content: $icon-lineplot
 }
 
-$icon-login: "\EA20";
+$icon-login: "\EA21";
 .icon-login:before {
   content: $icon-login
 }
 
-$icon-mail: "\EA21";
+$icon-mail: "\EA22";
 .icon-mail:before {
   content: $icon-mail
 }
 
-$icon-map: "\EA22";
+$icon-map: "\EA23";
 .icon-map:before {
   content: $icon-map
 }
 
-$icon-matrix: "\EA23";
+$icon-matrix: "\EA24";
 .icon-matrix:before {
   content: $icon-matrix
 }
 
-$icon-minus: "\EA24";
+$icon-minus: "\EA25";
 .icon-minus:before {
   content: $icon-minus
 }
 
-$icon-more: "\EA25";
+$icon-more: "\EA26";
 .icon-more:before {
   content: $icon-more
 }
 
-$icon-parallel: "\EA26";
+$icon-parallel: "\EA27";
 .icon-parallel:before {
   content: $icon-parallel
 }
 
-$icon-pencil: "\EA27";
+$icon-pencil: "\EA28";
 .icon-pencil:before {
   content: $icon-pencil
 }
 
-$icon-person: "\EA28";
+$icon-person: "\EA29";
 .icon-person:before {
   content: $icon-person
 }
 
-$icon-piechart: "\EA29";
+$icon-piechart: "\EA2A";
 .icon-piechart:before {
   content: $icon-piechart
 }
 
-$icon-play-circle: "\EA2A";
+$icon-play-circle: "\EA2B";
 .icon-play-circle:before {
   content: $icon-play-circle
 }
 
-$icon-plus: "\EA2B";
+$icon-plus: "\EA2C";
 .icon-plus:before {
   content: $icon-plus
 }
 
-$icon-presentation: "\EA2C";
+$icon-presentation: "\EA2D";
 .icon-presentation:before {
   content: $icon-presentation
 }
 
-$icon-radar: "\EA2D";
+$icon-radar: "\EA2E";
 .icon-radar:before {
   content: $icon-radar
 }
 
-$icon-refresh: "\EA2E";
+$icon-refresh: "\EA2F";
 .icon-refresh:before {
   content: $icon-refresh
 }
 
-$icon-resolve: "\EA2F";
+$icon-resolve: "\EA30";
 .icon-resolve:before {
   content: $icon-resolve
 }
 
-$icon-sankey: "\EA30";
+$icon-sankey: "\EA31";
 .icon-sankey:before {
   content: $icon-sankey
 }
 
-$icon-scatterplot: "\EA31";
+$icon-scatterplot: "\EA32";
 .icon-scatterplot:before {
   content: $icon-scatterplot
 }
 
-$icon-search: "\EA32";
+$icon-search: "\EA33";
 .icon-search:before {
   content: $icon-search
 }
 
-$icon-settings: "\EA33";
+$icon-settings: "\EA34";
 .icon-settings:before {
   content: $icon-settings
 }
 
-$icon-slides: "\EA34";
+$icon-slides: "\EA35";
 .icon-slides:before {
   content: $icon-slides
 }
 
-$icon-social: "\EA35";
+$icon-social: "\EA36";
 .icon-social:before {
   content: $icon-social
 }
 
-$icon-sort-asc: "\EA36";
+$icon-sort-asc: "\EA37";
 .icon-sort-asc:before {
   content: $icon-sort-asc
 }
 
-$icon-sort-desc: "\EA37";
+$icon-sort-desc: "\EA38";
 .icon-sort-desc:before {
   content: $icon-sort-desc
 }
 
-$icon-sound-off: "\EA38";
+$icon-sound-off: "\EA39";
 .icon-sound-off:before {
   content: $icon-sound-off
 }
 
-$icon-sound-on: "\EA39";
+$icon-sound-on: "\EA3A";
 .icon-sound-on:before {
   content: $icon-sound-on
 }
 
-$icon-stop-circle: "\EA3A";
+$icon-stop-circle: "\EA3B";
 .icon-stop-circle:before {
   content: $icon-stop-circle
 }
 
-$icon-sync: "\EA3B";
+$icon-sync: "\EA3C";
 .icon-sync:before {
   content: $icon-sync
 }
 
-$icon-table: "\EA3C";
+$icon-table: "\EA3D";
 .icon-table:before {
   content: $icon-table
 }
 
-$icon-trash: "\EA3D";
+$icon-trash: "\EA3E";
 .icon-trash:before {
   content: $icon-trash
 }
 
-$icon-warning: "\EA3E";
+$icon-warning: "\EA3F";
 .icon-warning:before {
   content: $icon-warning
 }
 
-$icon-zoom-out: "\EA3F";
+$icon-zoom-out: "\EA40";
 .icon-zoom-out:before {
   content: $icon-zoom-out
 }
 
-$icon-zoom: "\EA40";
+$icon-zoom: "\EA41";
 .icon-zoom:before {
   content: $icon-zoom
 }
